Remove Legacy Participant.